# keriox

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bin.rs  lib.rs
src/database/: lmdb.rs  mod.rs  sled.rs
src/database/sled/: mod.rs  tables.rs
src/derivation/: attached_signature_code.rs  basic.rs  mod.rs  self_addressing.rs  self_signing.rs
src/error/: mod.rs  serializer_error.rs
src/event/: inception.rs  interaction.rs  mod.rs  receipt.rs
src/event/event_data/: inception.rs  interaction.rs  mod.rs  receipt.rs  rotation.rs
src/event/event_data/delegated/: inception.rs  mod.rs
src/event/sections/: key_config.rs  mod.rs  seal.rs  threshold.rs
src/event_message/: attachement.rs  attachment.rs  dummy_event.rs  event_msg_builder.rs  key_event_message.rs  mod.rs  parse.rs  payload_size.rs  serialization_info.rs  serializer.rs  signature.rs  signed_event_message.rs
src/event_message/tests/: event_msg_builder.rs  test_utils.rs
src/event_parsing/: attachment.rs  message.rs  mod.rs  pack.rs  payload_size.rs  prefix.rs
src/events/: inception.rs  mod.rs
src/events/event_data/: interaction.rs  mod.rs  rotation.rs
src/events/sections/: mod.rs
src/keri/: mod.rs  test.rs  witness.rs
src/keys/: mod.rs
src/log/: mod.rs
src/prefix/: attached_seal.rs  attached_signature.rs  basic.rs  digest.rs  mod.rs  p2.rs  parse.rs  public_key.rs  seed.rs  self_addressing.rs  self_signing.rs
src/processor/: async_processing.rs  deserialized.rs  mod.rs  tests.rs
src/query/: key_state_notice.rs  mod.rs  query.rs  reply.rs
src/receipt/: mod.rs  nontransferable.rs  transferable.rs
src/sections/: key_config.rs  mod.rs  seal.rs  witness_config.rs
src/signer/: mod.rs  wallet.rs
src/state/: delegated.rs  mod.rs  signatory.rs
src/util/: dfs_serializer.rs  did_doc.rs  mod.rs
tests/: log_state.rs  test_direct_mode.rs
