[package]
name = "keri"
version = "0.1.2"
authors = ["Decentralized Identity Foundation"]
edition = "2018"
description = "Core library for the Key Event Receipt Infrastructure "
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
exp_ursa = []

[dependencies]
ursa = { version = "0.3", default-features = false, features = ["portable"]}
base64 = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10"
thiserror = "1.0"
serde-hex = "0.1"
