[package]
name = "keri"
version = "0.3.0"
authors = ["Decentralized Identity Foundation", "Charles Cunningham <charles@jolocom.io>"]
edition = "2018"
description = "Core library for the Key Event Receipt Infrastructure "
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
lmdb = ["rkv", "bincode"]
default = ["lmdb"]

[dependencies]
ursa = { git = "https://github.com/hyperledger/ursa", branch = "master", default-features = false, features = ["portable"]}
base64 = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10"
thiserror = "1.0"
serde-hex = "0.1"
nom = "5"
itoa = "0.4"
ryu = "1.0"
serde-transcode = "1.1"
blake3 = { version = "0.3", default-features = false }
chrono = "0.4.18"

rkv = { version = "0.15", optional = true }
bincode = { version = "1.3.1", optional = true }

[dev-dependencies]
tempfile = "3.1"
