[package]
name = "keri"
version = "0.6.0"
authors = ["Decentralized Identity Foundation", "Charles Cunningham <charles@jolocom.io>"]
edition = "2018"
description = "Core library for the Key Event Receipt Infrastructure "
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
lmdb = ["rkv", "bincode"]
sled-db = ["sled", "fixed"]
default = ["sled-db"]

[dependencies]
ed25519-dalek = "1.0.1"
k256 = { version = "0.8.0", features = ["ecdsa", "sha256", "zeroize"] }
blake2 = "0.9.1"
sha2 = "0.9.3"
sha3 = "0.9.1"
rand = { version = "0.7.3", features = ["std", "getrandom"] }
base64 = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"
serde_derive = "1.0.106"
thiserror = "1.0"
serde-hex = "0.1"
nom = "5"
itoa = "0.4"
ryu = "1.0"
blake3 = { version = "0.3", default-features = false }
chrono = "0.4.18"
rmp-serde = "0.14"
arrayref = "0.3.6"
zeroize = "1.3.0"
sled = { version = "0.34.6", optional = true }
fixed = { version = "1.9", optional = true }

rkv = { version = "0.17", optional = true }
bincode = { version = "1.3.1", optional = true }

[dev-dependencies]
tempfile = "3.1"
sodiumoxide = "0.2.6"
